# Linear-Regression-with-Cpp

./: CMakeLists.txt  CTestConfig.cmake  README.md
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  lrgSetupMSVCRuntime.cmake  lrgSetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  lrgLinReg.cpp  lrgMyFirstApp.cpp
Code/Lib/: CMakeLists.txt  lrgBasicTypes.cpp  lrgBasicTypes.h  lrgDataCreatorI.h  lrgException.cpp  lrgException.h  lrgExceptionMacro.h  lrgFileLoaderDataCreator.cpp  lrgFileLoaderDataCreator.h  lrgGradientDescentSolverStrategy.cpp  lrgGradientDescentSolverStrategy.h  lrgLinearDataCreator.cpp  lrgLinearDataCreator.h  lrgLinearModelSolverStrategyI.h  lrgMyFunctions.cpp  lrgMyFunctions.h  lrgNormalEquationSolverStrategy.cpp  lrgNormalEquationSolverStrategy.h  lrgWin32ExportHeader.h
Testing/: CMakeLists.txt  lrgBasicTest.cpp  lrgCatchMain.cpp  lrgCatchMain.h  lrgCommandLineArgsTest.cpp  lrgLeastSquaresSolverTests.cpp
Testing/Data/: CMakeLists.txt
